Changing Static Text and Beautification

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LoginForm</title>
+  <title>Digital Books - No. 1 Book Subscription Platform on the internet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon.svg">
 </head>
 <body class="">
   <app-root></app-root>
